--- a/app/server/index.html
+++ b/app/server/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>React Editor</title>
+
+    <%= stylesheets %>
   </head>
   <body>
     <main id="app"><%= html %></main>
