--- a/src/server/index.html
+++ b/src/server/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>React Editor</title>
-
+	
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     <%= stylesheets %>
   </head>
   <body>
